--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -4,7 +4,7 @@
   <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
 <% else %>
   <li><%= link_to 'Sign in', new_user_session_path %></li>
-  <li><%= link_to 'Sign up', new_user_registration_path, data: { no_turbolink: true } %></li>
+  <li><%= link_to 'Sign up', new_user_registration_path(plan: 'silver') %></li>
 <% end %>
 <% if user_signed_in? %>
   <% if current_user.admin? %>
