tests on visitor, product, sign_in, sign_out

--- a/app/views/content/platinum.html.erb
+++ b/app/views/content/platinum.html.erb
@@ -1,2 +1,4 @@
 <h1>Content#platinum</h1>
-<p>Find me in app/views/content/platinum.html.erb</p>
+<h4>Products Offered</h4>
+  <%= link_to 'Download PDF', products_path('product.pdf'), class: 'btn btn-success btn-large' %>
+<h6>Find me in app/views/content/platinum.html.erb</h6>
