--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,4 +13,6 @@
       </table>
     </div>
   </div>
+  <h4>Products Listed</h4>
+    <p><%= link_to 'Download PDF', products_path('product.pdf'), class: 'btn btn-success btn-large' %></p>
 </div>
