tests on sign_up, sign_in, sign_out, product

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="authform">
   <h3>Edit <%= resource_name.to_s.humanize %></h3>
-  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), autofocus: true, html: { method: :put, role: 'form' }) do |f| %>
     <%= devise_error_messages! %>
     <div class="form-group">
       <%= f.label :email %>
-      <%= f.email_field :email, :autofocus => true, class: 'form-control' %>
+      <%= f.email_field :email, class: 'form-control' %>
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
@@ -13,7 +13,7 @@
       <p>Leave these fields blank if you don't want to change your password.</p>
       <div class="form-group">
         <%= f.label :password %>
-        <%= f.password_field :password, :autocomplete => 'off', class: 'form-control' %>
+        <%= f.password_field :password, autocomplete: 'off', class: 'form-control' %>
       </div>
       <div class="form-group">
         <%= f.label :password_confirmation %>
@@ -27,21 +27,21 @@
         <%= f.password_field :current_password, class: 'form-control' %>
       </div>
     </fieldset>
-    <%= f.submit 'Update', :class => 'button right' %>
+    <%= f.submit 'Update', class: 'button right' %>
   <% end %>
 </div>
 <div class="authform">
   <h3>Subscription Plan</h3>
-  <%= form_for(resource, :as => resource_name, :url => change_plan_path, :html => { :method => :put, :role  => 'form'}) do |f| %>
+  <%= form_for(resource, as: resource_name, url: change_plan_path, html: { method: :put, role: 'form' }) do |f| %>
     <div class="form-group">
       <%= f.label 'Subscription plan' %>
       <%= f.collection_select(:plan_id, Plan.all, :id, :name) %>
     </div>
-    <%= f.submit 'Change Plan', :class => 'button right' %>
+    <%= f.submit 'Change Plan', class: 'button right' %>
   <% end %>
 </div>
 <div class="authform">
   <h3>Cancel Account</h3>
   <p>Unhappy? We'll be sad to see you go.</p>
-  <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button right' %>
+  <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'button right' %>
 </div>
