--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,9 +1,9 @@
-<%# Rails flash messages styled for Bootstrap 3.0 %>
+<%# Rails flash messages styled for Bootstrap 3.3 %>
 <% flash.each do |name, msg| %>
   <% if msg.is_a?(String) %>
     <div class="alert alert-<%= name.to_s == 'notice' ? 'success' : 'danger' %>">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <%= content_tag :div, msg, id: "flash_#{name}" %>
     </div>
   <% end %>
 <% end %>
