--- a/app/views/layouts/_nav_links_for_auth.html.erb
+++ b/app/views/layouts/_nav_links_for_auth.html.erb
@@ -1,12 +1,10 @@
 <% if user_signed_in? %>
-  <li><%= link_to 'Edit account', edit_user_registration_path %></li>
-  <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
+    <li><%= link_to t(:edit_account), edit_user_registration_path %></li>
+    <% if can?(:access, :rails_admin) %>
+        <li><%= link_to t(:administration), rails_admin_path %></li>
+    <% end %>
+    <li><%= link_to t(:sign_out), destroy_user_session_path, :method => 'delete' %></li>
 <% else %>
-  <li><%= link_to 'Sign in', new_user_session_path %></li>
-  <li><%= link_to 'Sign up', new_user_registration_path, data: { no_turbolink: true } %></li>
-<% end %>
-<% if user_signed_in? %>
-  <% if current_user.try(:admin?) %>
-    <li><%= link_to 'Users', users_path %></li>
-  <% end %>
+    <li><%= link_to t(:sign_in), new_user_session_path %></li>
+    <li><%= link_to t(:sign_up), new_user_registration_path, data: { no_turbolink: true } %></li>
 <% end %>
