fix wording for plans in index in order to test the creation of a plan

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -13,28 +13,28 @@
   </div>
   <div class="row col-sm-12 plans">
     <div class="col-sm-2 well">
-      <div class="plan"><h2>Silver</h2></div>
+      <div class="plan"><h2>StartUp</h2></div>
       <ul class="list-unstyled">
         <li>One lesson a month</li>
       </ul>
       <h3>$9/month</h3>
-      <%= link_to 'Subscribe', new_user_registration_path(plan: 'silver'), :class => 'btn btn-primary' %>
+      <%= link_to 'Subscribe', new_user_registration_path(plan: 'start-up'), :class => 'btn btn-primary' %>
     </div>
     <div class="col-sm-2 well featured">
-      <div class="plan featured-plan"><h2>Gold</h2></div>
+      <div class="plan featured-plan"><h2>Growth</h2></div>
       <ul class="list-unstyled">
         <li>Ten lessons a month</li>
       </ul>
       <h3>$19/month</h3>
-      <%= link_to 'Subscribe', new_user_registration_path(plan: 'gold'), :class => 'btn btn-primary' %>
+      <%= link_to 'Subscribe', new_user_registration_path(plan: 'growth'), :class => 'btn btn-primary' %>
     </div>
     <div class="col-sm-2 well">
-      <div class="plan"><h2>Platinum</h2></div>
+      <div class="plan"><h2>Premium</h2></div>
       <ul class="list-unstyled">
         <li>Thirty lessons a month</li>
       </ul>
       <h3>$29/month</h3>
-      <%= link_to 'Subscribe', new_user_registration_path(plan: 'platinum'), :class => 'btn btn-primary' %>
+      <%= link_to 'Subscribe', new_user_registration_path(plan: 'premium'), :class => 'btn btn-primary' %>
     </div>
   </div>
 <% end %>
